# adventofcode2021

./: pyproject.toml
day-01/: lib.py  part1.py  part2.py
day-02/: part1.py  part2.py
day-03/: part1.py  part2.py
day-04/: lib.py  part1.py  part2.py
day-05/: lib.py  part1.py  part2.py
day-06/: lib.py  part1.py  part2.py
day-07/: part1.py  part2.py
