[tool.poetry]
name = "adventofcode2021"
version = "0.0.1"
description = ""
authors = ["Marcel van Veen <marcel@marcelvanveen.nl>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"